kustomize/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pull-request-service
spec:
  selector:
    name: pull-request-service
  ports:
  - name: web
    port: 8080
    targetPort: 8080
    protocol: TCP
