kustomize/ingresses.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pull-request-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - pull-request-service.vitalbeats.dev
      secretName: pull-request-service-tls
  rules:
    - host: pull-request-service.vitalbeats.dev
      http:
        paths:
          - backend:
              serviceName: pull-request-service
              servicePort: 8080
